--- a/Index.html
+++ b/Index.html
@@ -21,5 +21,11 @@
         rem natus eum sapiente explicabo neque corporis officia, nulla expedita eos voluptate maiores libero adipisci?</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero quod eaque ducimus at aliquam, nemo autem commodi soluta laboriosam. Doloremque delectus expedita voluptatibus eos nisi quasi magnam quas nobis ex.</p>
         <b>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem fugit dicta quibusdam ut, magni velit odit asperiores aliquid, facilis, expedita illum eligendi at laboriosam neque vero deleniti harum magnam doloremque!</b>
+        <i>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, voluptate. Dolor, quibusdam porro! Error id omnis delectus at iusto enim aliquam laudantium sunt, nulla officia reiciendis nostrum, neque accusamus facilis.</i>
+        <ul>
+            <li>This is ul List</li>
+            <li>This is ul List</li>
+            <li>This is ul List</li>
+        </ul>
 </body>
 </html>
